{
    "name": "CatInput",
    "maps": [
        {
            "name": "Movement",
            "id": "1316098d-a4e2-419d-a6ea-8189f320aa96",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "Value",
                    "id": "174a9463-04ce-4b2e-af6d-6491ab3b75bd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UpJump",
                    "type": "Button",
                    "id": "47e507ab-03c3-48b3-aa7f-6150d8a99096",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownJump",
                    "type": "Button",
                    "id": "668cc88b-9ad8-4107-97fe-6063beaf747e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "c42ba05d-6b1e-47d8-b843-c744a8acafac",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b60c946d-6bcc-439c-9e6f-5d59079a8c6d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3d14f595-3dd5-4936-b477-e5652658b361",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4c821e44-3c86-4078-8455-b8be5b10af97",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54c88f18-6676-42bd-8fce-0f1c8156d441",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}